EKS/manifests/irsa and ingress/ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: aviz-service
  namespace: default
spec:
  type: ClusterIP
  selector:
    app: aviz-app
  ports:
    - port: 80
      targetPort: 5000    # Flask runs on 5000, ALB hits port 80 on the service
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aviz-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:655700896650:certificate/2a44674f-bc11-4484-bbf5-eb57f33329c5
    alb.ingress.kubernetes.io/ssl-policy: ELBSecurityPolicy-TLS13-1-2-Res-PQ-2025-09
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS": 443}]'

spec:
  rules:
    - host: dynamo.awswithavinashreddy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aviz-service
                port:
                  number: 80
    - host: cal.awswithavinashreddy.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: cal-service
                port:
                  number: 8080
